css/style.css
/*===================================================================
============================== Variables ============================
=====================================================================*/

:root {
  --purple: purple;
  --pink: #ff8ed3;
  --cream: #d7d5d6;
  --lightgray: #ebeaea;
  --brown: #392e32;
  --margin: 30px;
  --margin-small: 13.5px;
}

@font-face {
  font-family: LudwigPro-Normal;
  src: url("/assets/fonts/LifeLTStd-Roman.otf") format("opentype");
}

@keyframes color {
  0% {background-color: var(--brown);}
  100% {background-color: var(--lightgray);}
}

/*================================================================
======================= Global Settings ==========================
==================================================================*/

* {
  font-size: 100%;
  font-weight: normal;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--brown);
  font-family: "LudwigPro-Normal";
}

body.home {
  animation: color 8s alternate infinite;
}

body.project {
  animation: color 3s reverse;
}

a, a:visited {
  color: var(--purple);
  text-shadow: 0 0 12.5px var(--purple);
  padding: 0 0 0.2 0;
  transition: .2s ease-in-out;
  text-decoration: none;

}

a[href]:hover {
  color: #d7d5d6;
  text-shadow: 0 0 12.5px #d7d5d6;
  transition: .2s ease-in-out;
}

/*===================================================================
============================== Header ===============================
=====================================================================*/

.site-header {
  display: flex;
  justify-content: space-between;
  padding-left: var(--margin);
  padding-top: var(--margin);
  padding-bottom: 9rem;
  transform: translateY(-6px);
}

.site-header a {
  font-size: 15.3px;
  letter-spacing: 0.3px;
  word-spacing: 0.2px;
  max-width: 90vw;
}

.site-header .randomLink {
  position: fixed;
  right: var(--margin);
  top: var(--margin);
  transform: translateY(-6px);
  font-size: 20px;
}

/*===================================================================
============================== Footer ===============================
=====================================================================*/

.footer-nav {
  display: flex;
  justify-content: space-between;
  padding: var(--margin-small);
}

@media (min-width: 40rem) {
  .footer-nav {
    padding: var(--margin);
  }
}

.footer-nav a {
  font-size: 20px;
}

.site-footer {
  letter-spacing: 0.3px;
  word-spacing: 0.2px;
  font-size: 15.3px;
  padding-left: var(--margin-small);
  padding-right: var(--margin-small);
  color: var(--cream);
  padding-bottom: var(--margin);
}

@media (min-width: 40rem) {
  .site-footer {
    padding-left: var(--margin);
    padding-right: var(--margin);
  }
}

/*===================================================================
============================== Homepage =============================
=====================================================================*/

.post-list .post {
  list-style: none;
}

.post-title {
  color: var(--purple);
  text-shadow: 15px;
  font-size: 15.3px;
  letter-spacing: 0.3px;
  word-spacing: 0.2px;
  transition: .2s ease-in-out;
  padding-left: var(--margin);
  margin-bottom: var(--margin-small);
  display: block;
  transform: translateY(-6px);
  top: var(--margin);
  position: sticky;
  max-width: 80vw;
}

.post-title h1,
.post-title h2,
.post-title h3 {
  display: inline-block;
}

.post-images {
  padding-left: var(--margin-small);
  padding-right: var(--margin-small);
}

[data-book="true"] .post-images {
  margin-bottom: -.7%;
  margin-top: -.7vw;
  transform: translateX(-.7%);
}

[data-book="true"] .post-list-image {
  margin-bottom: -.5vw;
}

.post-list-image {
  display: block;
  margin-bottom: calc(var(--margin-small) + 1px); /* margin-small with optical correction */
  cursor: pointer;
}

.post-list-image:last-of-type {
  margin-bottom: calc(var(--margin) - 2px); /* margin with optical correction */
}

.post-list-image img {
  display: block;
  max-width: 100%;
}


/*=============================================================
======================== Single Project =======================
===============================================================*/

.single-post--content {
  display: flex;
  flex-flow: column;
  margin-bottom: 4rem;
  padding-left: var(--margin-small);
  padding-right: var(--margin-small);
  padding-top: var(--margin);
  overflow-x: hidden;
  max-width: 100vw;
}

@media (min-width: 60rem) {
  .single-post--content {
    padding-right: 150px;
  }
}

.single-post--content p {
  text-align: left;
  font-weight: normal;
  hyphens: none;
  text-justify: inter-word;
  font-size: 15.3px;
  margin-bottom: .8em;
  word-spacing: 0.2px;
  letter-spacing: 0.3px;
  color: var(--cream);
  font-size: 15.3px;
  margin-bottom: 1.2em;
  width: 100%;
  margin-left: calc(var(--margin-small) * -1);
  padding-left: var(--margin-small);
}

@media (min-width: 50rem) {
  .single-post--content p {
    padding-left: var(--margin);
    width: 50%;
  }
}

.single-post--content [data-align='left'] {
  align-self: flex-start;
}

.single-post--content [data-align='right'] {
  align-self: flex-end;
}

.single-post--content [data-align='center'] {
  align-self: center;
}

.single-post--content img {
  max-width: 100%;
  margin-bottom: var(--margin);
}

@media (max-width: 40rem) {
  .single-post--content picture,
  .single-post--content img {
    width: 100% !important;
  }
  .post-list-image {
    max-width: 100% !important;
    max-height: none;
  }
}

.single-post--content .sticky {
  top: var(--margin);
  transform: translateY(-6px);
  margin-left: calc(var(--margin-small) * -1);
  width: 100%;
  margin-bottom: 1em;
  padding-left: var(--margin-small);
  left: var(--margin-small)
}

@media (min-width: 40rem) {
  .single-post--content .sticky {
    position: fixed;
    padding-left: var(--margin);
  }
}

.sticky p {
  max-width: none;
  width: 100%;
  margin: 0;
  padding: 0;
}

/*=============================================================
======================== Overlay Glyphs =======================
===============================================================*/

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
  opacity: 0;
  transition: 600ms;
}

.overlay.active {
  opacity: 1;
}

